--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		</div>
 	</div>
 
-Soy gerardo hernandez Real alias el morongas
+Soy gerardo hernandez Real alias el morongas locas de la colonia moctezuma segunda seccion
 
 
 <script type="text/javascript" src="Js/jquery.min.js"></script>
