se modifica el dia 4denov

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		</div>
 	</div>
 
-Soy gerardo hernandez Real alias el morongas locas de la colonia moctezuma segunda seccion
+Soy gerardo hernandez Real alias el morongas locas de la colonia moctezuma segunda seccion deberia ser mejor realizarlo de esta manera
 
 
 <script type="text/javascript" src="Js/jquery.min.js"></script>
