la nave del olvido a sido añadida

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
 Soy gerardo hernandez Real alias el morongas locas de la colonia moctezuma segunda seccion deberia ser mejor realizarlo de esta manera
 que siento que ya te perdi por lo que mas quieras quedate a dormir
+Espera aun la nave del olvido no ha partido por nuestro ayer por nuestro amor yo te lo pido
+aun me quedan en mis manos primaveras
 
 <script type="text/javascript" src="Js/jquery.min.js"></script>
 <script type="text/javascript" src="Js/bootstrap.min.js"></script>
